[tool.poetry]
name = "betmatch"
version = "0.1.0"
description = ""
authors = ["vinikaviya <vinikaviya.@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.35"
uvicorn = "^0.31.1"
mysql-connector = "^2.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
